# pokedex

./: foobar
cpp/: CMakeLists.txt  generator.py  pokedex.qrc
cpp/Pokedex/: Pokedex.pro  main.cpp  pokedexwindow.cpp  pokedexwindow.h  pokedexwindow.ui
cpp/inc/: Evolution.hh  IWindow.hh  Move.hh  PkdexMainScreen.hh  PkdexSecondScreen.hh  PokeDatabase.hh  PokeView.hh  Pokedex.hh  Pokemon.hh  PokemonInfos.hh  PokemonView.hh  QtWindow.hh  Skill.hh  Types.hh  makeButtonTransparent.hh
cpp/src/: PkdexMainScreen.cpp  PkdexSecondScreen.cpp  PokeDatabase.cpp  PokeView.cpp  Pokedex.cpp  Pokemon.cpp  PokemonInfos.cpp  PokemonView.cpp  QtWindow.cpp  main.cpp  makeButtonTransparent.cpp
python/: PokedexMainScreen.py  PokedexResources.py  QPokedex.py  helpers.py  main.py
resources/: Pokedex_eteint.xcf  pokedata.xml  pokedex.qrc  pokedexOn.xcf
resources/Images/Icons/.svn/: all-wcprops  entries
resources/Images/Icons/.svn/text-base/: Pokedex.png.svn-base
resources/Images/Miniatures/.svn/: all-wcprops  entries
resources/Images/Pokemons/.svn/: all-wcprops  entries
resources/Images/Pokemons/.svn/text-base/: 1.png.svn-base  103.png.svn-base  107.png.svn-base  11.png.svn-base  110.png.svn-base  118.png.svn-base  12.png.svn-base  120.png.svn-base  121.png.svn-base  125.png.svn-base  128.png.svn-base  13.png.svn-base  131.png.svn-base  133.png.svn-base  136.png.svn-base  138.png.svn-base  139.png.svn-base  14.png.svn-base  141.png.svn-base  142.png.svn-base  144.png.svn-base  147.png.svn-base  148.png.svn-base  149.png.svn-base  150.png.svn-base  151.png.svn-base  152.png.svn-base  153.png.svn-base  (+225 more)
resources/Images/Types/.svn/: all-wcprops  entries
(+9 files in other folders)
